
	* Makefile.am: include PROGRAMS_LIBS

2020-06-26  Edward Hart <edward.dan.hart@gmail.com>

	FR #53 TURN directive
	* cobc.c, cobc.h, tree.c: completed >>TURN EC-I-O file.
	* cobc.c: fixed line reported in >>TURN syntax errors.
	* pplex.l, ppparse.y: added SET BOUND and SET SSRANGE.

2020-06-26  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l: allow more characters in $DISPLAY

2020-06-23  Edward Hart <edward.dan.hart@gmail.com>

	FR #53 TURN directive
	* cobc.c, cobc.h: completed initial implementation on disabling ECs.
	* cobc.c, cobc.h, parser.y, ppparse.y, scanner.l: completed initial
	  implementation of >>TURN.

2020-06-22  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, cobc.h, flag.def, ppparse.y: draft work on >>TURN and
	  disabling exceptions (FR #53).

2020-06-22  Simon Sobisch <simonsobisch@gnu.org>

	FR #193 work on TYPE TO / SAME AS, LIKE
	* parser.y (inherit_external_definition): added missing syntax check
	* parser.y (single_reference): don't add entries in typedef to
	  reference_list as those are not accesible outside of it
	* field.c (copy_into_field, copy_into_field_recursive): completely
	  rewritten, now copies single attributes explicit instead of copying the
	  complete source and restore some items later; re-create "local" fields
	  like indices and keys for OCCURS in the target space
	* field.c (copy_into_field): handle VALUE clause on source and target

	* parser.y (occurs_keys): removed unneeded NULL check
	* parser.y (occurs_key_field): only build up field reference once and
	  reuse it for every key definition
	* field.c, tree.h, parser.y (occurs_key_field): new function in field.c:
	  cb_build_full_field_reference, extracted and simplified from parser.y

2020-06-17  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (get_finalized_description_tree): extracted to remove
	  duplicate code (part of it was missing in some old places)
	* typeck.c (cb_build_move): simplified special handling for
	  cb_numeric_pointer