@@ -107,31 +107,39 @@ done
 
 
 # different flags checked in the testsuite
-COB_BIGENDIAN="no"
+# note: kept intended to ease merge from atlocal.in
 
-# prevent multiple calls by caching the output
-${COBC} --info > info.out
+	# prevent multiple calls by caching the output
+	${COBC} --info > info.out
 
-COB_OBJECT_EXT="$(grep COB_OBJECT_EXT info.out | cut -d: -f2 | cut -b2-)"
-COB_EXE_EXT="$(grep COB_EXE_EXT info.out | cut -d: -f2 | cut -b2-)"
+	COB_OBJECT_EXT="$(grep COB_OBJECT_EXT info.out | cut -d: -f2 | cut -b2-)"
+	COB_EXE_EXT="$(grep COB_EXE_EXT info.out | cut -d: -f2 | cut -b2-)"
 
-COB_HAS_64_BIT_POINTER=`${COBCRUN} --info | grep "64bit-mode" | cut -d: -f2 | cut -b2-`
-if test $(grep -i -c "ISAM.*disabled" info.out) = 0; then
-	COB_HAS_ISAM="yes"
-else
-	COB_HAS_ISAM="no"
-fi
-if test $(grep -i -c "XML library.*disabled" info.out) = 0; then
-	COB_HAS_XML2="yes"
-else
-	COB_HAS_XML2="no"
-fi
-if test $(grep -i -c "JSON library.*disabled" info.out) = 0; then
-	COB_HAS_JSON="yes"
-else
-	COB_HAS_JSON="no"
-fi
-COB_HAS_CURSES="no"
+	COB_BIGENDIAN="no"
+
+	COB_HAS_64_BIT_POINTER=`${COBCRUN} --info | grep "64bit-mode" | cut -d: -f2 | cut -b2-`
+	cob_indexed=$(grep -i "indexed file" info.out | cut -d: -f2)
+	case $(grep -i "indexed file" info.out | cut -d: -f2) in
+	" disabled")	COB_HAS_ISAM="no";;
+	" BDB") 		COB_HAS_ISAM="db";;
+	" VBISAM"*)	COB_HAS_ISAM="vbisam";;
+	" D-ISAM")	COB_HAS_ISAM="disam";;
+	" C-ISAM")	COB_HAS_ISAM="cisam";;
+	" EXTFH")	COB_HAS_ISAM="index_extfh";;
+	*)		echo "unknown entry -$cob_indexed- please report" && exit 1;;
+	esac
+	if test $(grep -i -c "XML library.*disabled" info.out) = 0; then
+		COB_HAS_XML2="yes"
+	else
+		COB_HAS_XML2="no"
+	fi
+	if test $(grep -i -c "JSON library.*disabled" info.out) = 0; then
+		COB_HAS_JSON="yes"
+	else
+		COB_HAS_JSON="no"
+	fi
+
+	COB_HAS_CURSES="no"
 #if test "x$MSYSTEM" != "x" -o "$OSTYPE" = "cygwin"; then
 	# running MSYS builds as not-visible child processes result in
 	# "Redirection is not supported" (old PDcurses) and exit 127 (NCurses)
@@ -140,7 +148,6 @@ COB_HAS_CURSES="no"
 	#	COB_HAS_CURSES="yes"
 	#fi
 #fi
-
 
 export COB_HAS_ISAM COB_HAS_XML2 COB_HAS_JSON COB_HAS_CURSES COB_HAS_64_BIT_POINTER
 export COBC COBCRUN COBCRUN_DIRECT RUN_PROG_MANUAL
