@@ -315,11 +315,10 @@ AT_DATA([prog.cob], [
 ])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
-
 AT_CLEANUP
 
 
-## Redefinition
+## Redefinition (no issue if not referenced)
 
 AT_SETUP([Redefinition of 01 items])
 AT_KEYWORDS([definition])
@@ -333,13 +332,20 @@ AT_DATA([prog.cob], [
        01 X             PIC X.
 ])
 
+AT_CHECK([$COBC -fsyntax-only prog.cob], [0], [], [])
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
 [prog.cob:7: warning: redefinition of 'X'
 prog.cob:6: note: 'X' previously defined here
 ])
-
-AT_CHECK([$COMPILE_ONLY -Wno-additional prog.cob], [0], [], [])
-
+AT_CHECK([$COMPILE_ONLY -Wno-redefinition prog.cob], [0], [], [])
+AT_CHECK([$COMPILE_ONLY -Werror=redefinition prog.cob], [1], [],
+[[prog.cob:7: error: redefinition of 'X'
+prog.cob:6: note: 'X' previously defined here
+]])
+AT_CHECK([$COMPILE_ONLY -fdiagnostics-show-option -Werror=redefinition prog.cob], [1], [],
+[[prog.cob:7: error: redefinition of 'X' [-Werror=redefinition]
+prog.cob:6: note: 'X' previously defined here [-Werror=redefinition]
+]])
 AT_CLEANUP
 
 
@@ -503,16 +509,16 @@ AT_DATA([prog.cob], [
 ])
 
 AT_CHECK([$COMPILE_ONLY --ffold-call=upper -fdiagnostics-show-option prog.cob], [1], [],
-[prog.cob:7: warning: redefinition of 'prog' [[-Wadditional]]
-prog.cob:3: note: 'prog' previously defined here [[-Wadditional]]
+[[prog.cob:7: warning: redefinition of 'prog' [-Wredefinition]
+prog.cob:3: note: 'prog' previously defined here [-Wredefinition]
 prog.cob:23: error: redefinition of program name 'foo'
 prog.cob:31: error: redefinition of program name 'prog'
 prog.cob:42: error: redefinition of 'foo'
-prog.cob:35: note: 'foo' previously defined here
+prog.cob:35: note: 'foo' previously defined here [-Wredefinition]
 prog.cob:42: error: redefinition of program name 'foo'
 prog.cob:49: error: PROCEDURE DIVISION header missing
 prog.cob:50: error: redefinition of program name 'samename'
-])
+]])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 [prog.cob:23: error: redefinition of program ID 'foo'
